--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,11 @@
 </head>
 <body>
   <% flash.each do |key, value| %>
-  <%= content_tag(:div, value) %>
+    <%= content_tag(:div, value) %>
   <% end %>
 
 <%= yield %>
-
+  <%= render 'layouts/footer' %>
+  
 </body>
 </html>
