first phase debugging

--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -9,6 +9,7 @@
       </ul>
     </div>
   <% end %>
+<% end %>
   
 <%= form_for @movie do |f| %>
   <div>
@@ -39,3 +40,5 @@
     <%= f.submit "Submit" %> 
   </div>
 <% end %>
+
+
