--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -8,6 +8,12 @@
 
 <hr>
 
+<% @movie.reviews.each do |review| %>
+  <p><%= review.text %></p>
+  <p><%= review.rating_out_of_ten %>/10</p>
+  <small>- <%= review.user.full_name %></small><br/>
+<% end %>
+
 <h3>Reviews of <em><%= @movie.title %></em></h3>
 <% if current_user %>
   <% @movie.reviews.each do |review| %>
