--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -11,7 +11,7 @@
   <% end %>
 <% end %>
   
-<%= form_for @movie do |f| %>
+<%= form_for @movie, html: {multipart: true} do |f| %>
   <div>
     <%= f.label "title" %><br>
     <%= f.text_field "title" %>
@@ -29,8 +29,8 @@
     <%= f.number_field "runtime_in_minutes" %>
   </div>
   <div>
-    <%= f.label "poster_image_url" %><br>
-    <%= f.text_field "poster_image_url" %>
+    <%= f.label "poster_image" %><br>
+    <%= f.file_field "poster" %>
   </div>
   <div>
     <%= f.label "description" %><br>
