--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,6 +4,9 @@
 <h2><%= @movie.title %> (<%= link_to "edit", edit_movie_path(@movie) %>, <%= link_to "delete", movie_path(@movie), method: :delete, confirm: "You sure?" %>)</h2>
 <h3><%= @movie.release_date %></h3>
 <h4>Dir. <%= @movie.director %> | <%= @movie.runtime_in_minutes %> minutes</h4>
+
+<%= image_tag @movie.poster.thumb.url() %>
+
 <p><%= @movie.description %></p>
 
 <hr>
