--- a/app/views/admin/users/index.erb
+++ b/app/views/admin/users/index.erb
@@ -1,7 +1,8 @@
 <h2> Users </h2>
 
 <% @users.each do |user| %>
-  <li><%=  user %></li> 
+  <%= user.firstname %> <%= user.lastname %>
+  <%= %>
 <% end %>
 
 <%= paginate @users %>
