--- a/app/views/admin/users/index.erb
+++ b/app/views/admin/users/index.erb
@@ -1,9 +1,24 @@
 <h2> Users </h2>
 
-<% @users.each do |user| %>
-  <%= user.firstname %> <%= user.lastname %>
-  <%= %>
-<% end %>
+  <table>
+    <tr>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+    </tr>
+
+    <% @users.each do |user| %>
+      <tr>
+        <td><%= user.firstname %></td>
+        <td><%= user.lastname %></td>
+        <td><%= user.email %></td>
+        <td><%= link_to "delete", admin_user_path(user), method: :delete, data: { confirm: "You sure?" } %> </td>
+        <td> <%= link_to "edit", edit_admin_user_path(user) %> </td>
+      <tr>
+    <% end %>
+  </table>
+  
+
 
 <%= paginate @users %>
 
