--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Rotten Mangoes</h1>
 <%= link_to "Submit a movie!", new_movie_path %>
 <hr>
+<%= render 'search' %>
+<hr>
 <% @movies.each do |movie| %>
 
   <%= link_to image_tag(movie.poster_image_url), movie_path(movie) %>
