--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Edit User</h2>
 
-<%= form_for @user do |f| %>
+<%= form_for @user, url: admin_user_path(@user) do |f| %>
   <% if @user.errors.any? %>
     <div>
       <%= pluralize(@user.errors.count, "error") %> prevented the account from being created:
