--- a/app/views/movies/_search.html.erb
+++ b/app/views/movies/_search.html.erb
@@ -1,14 +1,14 @@
 <%= form_tag("/", method: "get") do %>
-  <%= label_tag(:title, "Search for movie title:") %>
-  <%= text_field_tag :title, params[:title] %>
+  <%= label_tag :title, "Search for movie title:" %>
+  <%= text_field_tag :title %>
 
-  <%= label_tag(:director, "Search by director:") %>
-  <%= text_field_tag :director, params[:director] %>
+  <%= label_tag :director, "Search by director:" %>
+  <%= text_field_tag :director %>
 
- <!--  <%= label_tag(:duration, "Search by movie length:") %>
-  <%= text_field_tag(:duration) %>
- -->
-  
+  <%= label_tag :duration, "Search by movie length:" %>
+  <%= text_field_tag :duration %>
+ 
+
 
   <%= submit_tag("Search") %>
 <% end %>
