--- a/app/views/admin/users/index.erb
+++ b/app/views/admin/users/index.erb
@@ -14,6 +14,7 @@
         <td><%= user.email %></td>
         <td><%= link_to "delete", admin_user_path(user), method: :delete, data: { confirm: "You sure?" } %> </td>
         <td> <%= link_to "edit", edit_admin_user_path(user) %> </td>
+        <td> <%= link_to "Change user", "/admin/change_users/#{user.id}" %> </td>
       <tr>
     <% end %>
   </table>
