--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,11 +3,14 @@
   <small>
 
     <% if current_user %>
-      <% if current_user.role %>
+<!-- if current_user.role -->
+      <% if session[:admin_id] %>
         Signed in as Administrator <%= current_user.full_name %> (<%= link_to "Log out", session_path("current"), method: :delete %>) (<%= link_to "Admin", admin_users_path%>)
-      <% else current_user %>
+        
+      <% elsif current_user %>
         Signed in as <%= current_user.full_name %> (<%= link_to "Log out", session_path("current"), method: :delete %>)
       <% end %>
+
     <% else %>
       <%= link_to "Log In", new_session_path %> | <%= link_to "Sign Up", new_user_path %>
     <% end %>
