--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= csrf_meta_tags %>
   </head>
 
-  <body>
+  <body class="<%= @current_page %>">
 
     <%= yield %>
     <%= javascript_include_tag "application" %>
