--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,33 @@
  *= require foundation_and_overrides
 
  */
+
+.default {
+  background-color: #fff;
+}
+
+.login {
+  background-image: url("cinama-city.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+footer {
+  background-color: rgba(0,0,0,0.5);
+  position: relative;
+  bottom:0;
+  width:100%;
+  height:60px;   /* Height of the footer */
+  clear: both;
+}
+
+footer a {
+  font-size: 1em;
+  color: #fff;
+}
+
+footer small {
+  font-size: 1em;
+  color: #fff;
+}
+
