--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -1,3 +1,59 @@
 // Place all the styles related to the movies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+h2 {
+  font-size: 2.3em;
+  text-transform: uppercase;
+}
+
+#new_movie {
+  width: 400px;
+}
+
+#search {
+  float: left;
+  padding: 40px;
+}
+
+#search_form {
+  width: 300px;
+}
+
+/* movies index */
+
+#movies {
+  float: left;
+  padding-left: 40px;
+  max-width: 1000px;
+}
+
+.poster {
+  float: left;
+  padding-top: 50px;
+}
+
+.review {
+  float: left;
+  max-width: 700px;
+  padding-left: 40px;
+}
+
+/* show movie */
+.show-movie {
+  width: 700px;
+  margin: 0 auto;
+}
+
+.summery {
+  clear: both;
+  padding-top: 50px;
+}
+
+.stats {
+  float: left;
+  padding-left: 30px;
+}
+.show-poster {
+  float: left
+}
