--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,34 +1,33 @@
-<h1>Sign Up</h1>
-<%= form_for @user do |f| %>
-  <% if @user.errors.any? %>
-    <div>
-      <%= pluralize(@user.errors.count, "error") %> prevented the account from being created:
-      <ul>
-        <% @user.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div>
-    <%= f.label "email" %><br>
-    <%= f.text_field "email" %>
+<div class='container'>
+  <div class='wrapper-signup'>
+    <h1>Sign Up</h1>
+    <%= form_for @user do |f| %>
+      <% if @user.errors.any? %>
+        <div>
+          <%= pluralize(@user.errors.count, "error") %> prevented the account from being created:
+          <ul>
+            <% @user.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <div>
+        <%= f.text_field "email", placeholder: "email" %>
+      </div>
+      <div>
+        <%= f.text_field "firstname", placeholder: "first name" %>
+      </div>
+      <div>
+        <%= f.text_field "lastname", placeholder: "last name" %>
+      </div>
+      <div>
+        <%= f.password_field "password", placeholder: "password" %>
+      </div>
+      <div>
+        <%= f.password_field "password_confirmation", placeholder: "email", placeholder: "confirm password" %>
+      </div>
+      <div><%= f.submit "Submit" %></div>
+    <% end %>
   </div>
-  <div>
-    <%= f.label "firstname", "First Name" %><br>
-    <%= f.text_field "firstname" %>
-  </div>
-  <div>
-    <%= f.label "lastname", "Last Name" %><br>
-    <%= f.text_field "lastname" %>
-  </div>
-  <div>
-    <%= f.label "password" %><br>
-    <%= f.password_field "password" %>
-  </div>
-  <div>
-    <%= f.label "password_confirmation" %><br>
-    <%= f.password_field "password_confirmation" %>
-  </div>
-  <div><%= f.submit "Submit" %></div>
-<% end %>
+</div>
