--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -7,10 +7,21 @@ h2 {
   text-transform: uppercase;
 }
 
+.fade-white {
+  background-color: rgba(255,255,255,0.8);
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  border-radius: 20px;
+}
+/* new movie */
+
 #new_movie {
   width: 400px;
+  margin: 0 auto;
+  padding-bottom: 50px;
 }
-
+/* search */
 #search {
   float: left;
   padding: 40px;
